--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Configure libxml2 build
+      run: 3rdparty\libxml2-2.9.10\win32\configure.bat
+
     - name: Build binary
       working-directory: ${{ env.GITHUB_WORKSPACE }}
       run: msbuild /m /p:Configuration=Release /p:Platform=x86 /p:WindowsTargetPlatformVersion=10.0.16299.0 ./build/vs2017/foo_openlyrics.sln
