Try switching the package step back to bash

--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -27,15 +27,13 @@ jobs:
       run: msbuild /m /p:Configuration=Release /p:Platform=x86 build\vs2017\foo_openlyrics.sln
 
     - name: Pack binary into archive
-      shell: pwsh
+      shell: bash
       run: |
-        $release_version="0.0"
-        $archivename="foo_openlyrics-${release_version}"
+        release_version="0.0"
+        archivename="foo_openlyrics-${release_version}"
         7z a "${archivename}.fb2k-component" ".\build\vs2017\Release\foo_openlyrics.dll"
         7z a "${archivename}-with_debug_symbols.zip" ".\build\vs2017\Release\foo_openlyrics.dll" ".\build\vs2017\Release\foo_openlyrics.pdb"
         echo "ARCHIVE_NAME=${archivename}" >> $GITHUB_ENV
-        echo $GITHUB_ENV
-        cat $GITHUB_ENV
 
     - name: Create GitHub release
       id: release
