--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -33,11 +33,12 @@ jobs:
       shell: bash
       run: |
         release_version="${GITHUB_REF#refs/tags/}"
-        echo "version is: $release_version"
         release_notes=`git tag -l --format="%(contents)" ${release_version}`
         release_name="foo_openlyrics-${release_version}"
+        echo "Release version ${release_version} with release notes:\n${release_notes}"
         7z a "${release_name}.fb2k-component" ".\build\vs2017\Release\foo_openlyrics.dll"
         7z a "${release_name}-with_debug_symbols.zip" ".\build\vs2017\Release\foo_openlyrics.dll" ".\build\vs2017\Release\foo_openlyrics.pdb"
+        echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
         echo "RELEASE_NAME=${release_name}" >> $GITHUB_ENV
         echo "RELEASE_NOTES=${release_notes}" >> $GITHUB_ENV
 
@@ -47,8 +48,27 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${GITHUB_REF#refs/tags/}
-        release_name: ${GITHUB_REF#refs/tags/}
+        tag_name: ${{ env.RELEASE_VERSION }}
+        release_name: ${{ env.RELEASE_VERSION }}
         body: ${{ env.RELEASE_NOTES }}
-        artifacts: ${{ env.RELEASE_NAME }}.fb2k-component,${{ env.RELEASE_NAME }}-with_debug_symbols.zip
         draft: true
+
+    - name: Upload component archive
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.release.outputs.upload_url }}
+        asset_path: ${{ env.RELEASE_NAME }}.fb2k-component
+        asset_name: ${{ env.RELEASE_NAME }}.fb2k-component
+        asset_content_type: application/octet-stream
+
+    - name: Upload debug symbols
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.release.outputs.upload_url }}
+        asset_path: ${{ env.RELEASE_NAME }}-with_debug_symbols.zip
+        asset_name: ${{ env.RELEASE_NAME }}-with_debug_symbols.zip
+        asset_content_type: application/octet-stream
