--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -2,7 +2,7 @@ name: release
 on:
   push:
     tags:
-    - '*'
+      - '*'
 
 jobs:
   build-release:
@@ -32,10 +32,14 @@ jobs:
     - name: Pack binary into archive
       shell: bash
       run: |
+        echo "Git ref = ${GITHUB_REF}"
         release_version="${GITHUB_REF#refs/tags/}"
         release_notes=`git tag -l --format="%(contents)" ${release_version}`
         release_name="foo_openlyrics-${release_version}"
-        echo "Release version ${release_version} with release notes:\n${release_notes}"
+        echo "Release version ${release_version} with release notes:"
+        echo ${release_notes}
+        echo "Release notes command output:"
+        git tag -l --format="%(contents)" ${release_version}
         7z a "${release_name}.fb2k-component" ".\build\vs2017\Release\foo_openlyrics.dll"
         7z a "${release_name}-with_debug_symbols.zip" ".\build\vs2017\Release\foo_openlyrics.dll" ".\build\vs2017\Release\foo_openlyrics.pdb"
         echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
