--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         release_version="${GITHUB_REF#refs/tags/}"
         release_name="foo_openlyrics-${release_version}"
         echo "Release version ${release_version}"
-        7z a "${release_name}.fb2k-component" ".\build\vs2017\Release\foo_openlyrics.dll"
+        7z a -tzip "${release_name}.fb2k-component" ".\build\vs2017\Release\foo_openlyrics.dll"
         7z a "${release_name}-with_debug_symbols.zip" ".\build\vs2017\Release\foo_openlyrics.dll" ".\build\vs2017\Release\foo_openlyrics.pdb"
         echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
         echo "RELEASE_NAME=${release_name}" >> $GITHUB_ENV
