Add support for configuring the tags used for saving & searching

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -65,8 +65,8 @@ BEGIN
     PUSHBUTTON      "Down",IDC_SOURCE_MOVE_DOWN_BTN,78,120,44,14,WS_DISABLED
     CONTROL         "Enable automatic save",IDC_AUTOSAVE_ENABLED_CHKBOX,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,162,88,10
-    COMBOBOX        IDC_SAVE_METHOD_COMBO,66,180,144,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,66,198,144,14,ES_AUTOHSCROLL
+    COMBOBOX        IDC_SAVE_METHOD_COMBO,66,180,112,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,66,198,111,14,ES_AUTOHSCROLL
     LTEXT           "Static",IDC_FILE_NAME_PREVIEW,66,216,144,8,SS_WORDELLIPSIS
     GROUPBOX        "Saving",IDC_STATIC,0,147,330,88
     GROUPBOX        "Searching",IDC_STATIC,0,0,330,142
@@ -74,6 +74,12 @@ BEGIN
     RTEXT           "Line Gap:",IDC_STATIC,18,261,42,10
     GROUPBOX        "Display",IDC_STATIC,0,240,330,42
     LTEXT           "Available sources:",IDC_STATIC,198,12,58,8
+    LTEXT           "Unsynced Tag",IDC_STATIC,193,182,48,8
+    LTEXT           "Synced Tag",IDC_STATIC,195,201,40,8
+    EDITTEXT        IDC_SAVE_TAG_UNSYNCED,243,180,82,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SAVE_TAG_SYNCED,243,198,82,14,ES_AUTOHSCROLL
+    LTEXT           "Tags (semicolon-separated)",IDC_STATIC,140,124,88,8
+    EDITTEXT        IDC_SEARCH_TAGS,229,121,96,14,ES_AUTOHSCROLL
 END
 
 
