Fix a save format preview format error when playback is stopped

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -50,7 +50,7 @@ END
 // Dialog
 //
 
-IDD_PREFERENCES DIALOGEX 0, 0, 332, 288
+IDD_PREFERENCES_ROOT DIALOGEX 0, 0, 332, 288
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
@@ -91,7 +91,7 @@ END
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO
 BEGIN
-    IDD_PREFERENCES, DIALOG
+    IDD_PREFERENCES_ROOT, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 325
@@ -107,7 +107,7 @@ END
 // AFX_DIALOG_LAYOUT
 //
 
-IDD_PREFERENCES AFX_DIALOG_LAYOUT
+IDD_PREFERENCES_ROOT AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
