Add a preferences page for the font & colours used for the panel
Closes #1

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -70,9 +70,6 @@ BEGIN
     LTEXT           "Static",IDC_FILE_NAME_PREVIEW,66,216,144,8,SS_WORDELLIPSIS
     GROUPBOX        "Saving",IDC_STATIC,0,147,330,88
     GROUPBOX        "Searching",IDC_STATIC,0,0,330,142
-    EDITTEXT        IDC_RENDER_LINEGAP_EDIT,66,258,40,14,ES_AUTOHSCROLL | ES_NUMBER
-    RTEXT           "Line Gap:",IDC_STATIC,18,261,42,10
-    GROUPBOX        "Display",IDC_STATIC,0,240,330,42
     LTEXT           "Available sources:",IDC_STATIC,198,12,58,8
     LTEXT           "Unsynced Tag",IDC_STATIC,193,182,48,8
     LTEXT           "Synced Tag",IDC_STATIC,195,201,40,8
@@ -80,6 +77,26 @@ BEGIN
     EDITTEXT        IDC_SAVE_TAG_SYNCED,243,198,82,14,ES_AUTOHSCROLL
     LTEXT           "Tags (semicolon-separated)",IDC_STATIC,140,124,88,8
     EDITTEXT        IDC_SEARCH_TAGS,229,121,96,14,ES_AUTOHSCROLL
+END
+
+IDD_PREFERENCES_DISPLAY DIALOGEX 0, 0, 333, 287
+STYLE DS_SETFONT | WS_CHILD
+FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
+BEGIN
+    PUSHBUTTON      "Choose Font...",IDC_FONT,120,12,192,18
+    CONTROL         "",IDC_FOREGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,36,192,18,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_HIGHLIGHT_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,60,192,20,WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,84,192,18,WS_EX_CLIENTEDGE
+    CONTROL         "Custom Text Colour",IDC_FOREGROUND_COLOUR_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,77,10
+    CONTROL         "Custom Background Colour",IDC_BACKGROUND_COLOUR_CUSTOM,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,90,102,10
+    CONTROL         "Custom Highlight Colour",IDC_HIGHLIGHT_COLOUR_CUSTOM,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,91,10
+    EDITTEXT        IDC_RENDER_LINEGAP_EDIT,59,136,40,12,ES_AUTOHSCROLL | ES_NUMBER
+    RTEXT           "Line Gap:",IDC_STATIC,12,137,36,10
+    CONTROL         "Custom Font",IDC_FONT_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,55,10
+    GROUPBOX        "Font && Colours",IDC_STATIC,0,0,324,114
+    GROUPBOX        "Other",IDC_STATIC,0,120,228,54
 END
 
 
@@ -98,6 +115,14 @@ BEGIN
         TOPMARGIN, 4
         BOTTOMMARGIN, 281
     END
+
+    IDD_PREFERENCES_DISPLAY, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 326
+        TOPMARGIN, 4
+        BOTTOMMARGIN, 280
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -108,6 +133,11 @@ END
 //
 
 IDD_PREFERENCES_ROOT AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_PREFERENCES_DISPLAY AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
