Add a preferences page with configuration for lyric saving
Closes #3. There could certainly be greater configurability for local
file saving, but I expect this covers most use-cases. We can always
open new issues for specific additional features.

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -54,8 +54,6 @@ IDD_PREFERENCES_ROOT DIALOGEX 0, 0, 332, 288
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
-    RTEXT           "Save Method:",IDC_STATIC,0,182,59,11
-    RTEXT           "Filename format:",IDC_STATIC,0,202,59,10
     LTEXT           "Search order:",IDC_STATIC,6,12,86,8
     LISTBOX         IDC_ACTIVE_SOURCE_LIST,6,24,126,90,LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LISTBOX         IDC_INACTIVE_SOURCE_LIST,198,24,125,90,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
@@ -63,38 +61,53 @@ BEGIN
     PUSHBUTTON      ">>",IDC_SOURCE_DEACTIVATE_BTN,138,72,54,14,WS_DISABLED
     PUSHBUTTON      "Up",IDC_SOURCE_MOVE_UP_BTN,18,120,41,14,WS_DISABLED
     PUSHBUTTON      "Down",IDC_SOURCE_MOVE_DOWN_BTN,78,120,44,14,WS_DISABLED
-    CONTROL         "Enable automatic save",IDC_AUTOSAVE_ENABLED_CHKBOX,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,162,88,10
-    COMBOBOX        IDC_SAVE_METHOD_COMBO,66,180,112,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,66,198,111,14,ES_AUTOHSCROLL
-    LTEXT           "Static",IDC_FILE_NAME_PREVIEW,66,216,144,8,SS_WORDELLIPSIS
-    GROUPBOX        "Saving",IDC_STATIC,0,147,330,88
     GROUPBOX        "Searching",IDC_STATIC,0,0,330,142
     LTEXT           "Available sources:",IDC_STATIC,198,12,58,8
-    LTEXT           "Unsynced Tag",IDC_STATIC,193,182,48,8
-    LTEXT           "Synced Tag",IDC_STATIC,195,201,40,8
-    EDITTEXT        IDC_SAVE_TAG_UNSYNCED,243,180,82,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_SAVE_TAG_SYNCED,243,198,82,14,ES_AUTOHSCROLL
     LTEXT           "Tags (semicolon-separated)",IDC_STATIC,140,124,88,8
     EDITTEXT        IDC_SEARCH_TAGS,229,121,96,14,ES_AUTOHSCROLL
+END
+
+IDD_PREFERENCES_SAVING DIALOGEX 0, 0, 332, 288
+STYLE DS_SETFONT | WS_CHILD
+FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
+BEGIN
+    RTEXT           "Save method:",IDC_STATIC,7,15,49,11
+    COMBOBOX        IDC_SAVE_METHOD_COMBO,66,13,125,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,90,121,199,14,ES_AUTOHSCROLL
+    LTEXT           "Static",IDC_SAVE_FILE_NAME_PREVIEW,89,138,144,8,SS_ENDELLIPSIS
+    LTEXT           "Unsynced tag:",IDC_STATIC,24,48,47,8
+    LTEXT           "Synced tag:",IDC_STATIC,29,66,39,8
+    EDITTEXT        IDC_SAVE_TAG_UNSYNCED,74,45,82,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SAVE_TAG_SYNCED,74,65,82,14,ES_AUTOHSCROLL
+    RTEXT           "File name format:",IDC_STATIC,27,124,59,10
+    GROUPBOX        "Local Files",IDC_STATIC,7,109,318,108
+    GROUPBOX        "ID3 Tags",IDC_STATIC,7,33,318,61
+    COMBOBOX        IDC_SAVE_DIRECTORY_CLASS,90,161,199,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Save directory:",IDC_STATIC,37,163,48,8
+    CONTROL         "Auto-save new lyrics",IDC_AUTOSAVE_ENABLED_CHKBOX,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,15,81,10
+    LTEXT           "Custom path format:",IDC_STATIC,21,185,64,8
+    EDITTEXT        IDC_SAVE_CUSTOM_PATH,89,182,200,14,ES_AUTOHSCROLL
+    LTEXT           "Static",IDC_SAVE_CUSTOM_PATH_PREVIEW,90,202,202,8,SS_PATHELLIPSIS
+    PUSHBUTTON      "...",IDC_SAVE_CUSTOM_PATH_BROWSE,292,183,20,14
 END
 
 IDD_PREFERENCES_DISPLAY DIALOGEX 0, 0, 333, 287
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
-    PUSHBUTTON      "Choose Font...",IDC_FONT,120,12,192,18
+    PUSHBUTTON      "Choose font...",IDC_FONT,120,12,192,18
     CONTROL         "",IDC_FOREGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,36,192,18,WS_EX_CLIENTEDGE
     CONTROL         "",IDC_HIGHLIGHT_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,60,192,20,WS_EX_CLIENTEDGE
     CONTROL         "",IDC_BACKGROUND_COLOUR,"Button",BS_OWNERDRAW | WS_TABSTOP,120,84,192,18,WS_EX_CLIENTEDGE
-    CONTROL         "Custom Text Colour",IDC_FOREGROUND_COLOUR_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,77,10
-    CONTROL         "Custom Background Colour",IDC_BACKGROUND_COLOUR_CUSTOM,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,90,102,10
-    CONTROL         "Custom Highlight Colour",IDC_HIGHLIGHT_COLOUR_CUSTOM,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,91,10
+    CONTROL         "Custom text colour",IDC_FOREGROUND_COLOUR_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,42,74,10
+    CONTROL         "Custom background colour",IDC_BACKGROUND_COLOUR_CUSTOM,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,90,101,10
+    CONTROL         "Custom highlight colour",IDC_HIGHLIGHT_COLOUR_CUSTOM,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,89,10
     EDITTEXT        IDC_RENDER_LINEGAP_EDIT,59,136,40,12,ES_AUTOHSCROLL | ES_NUMBER
-    RTEXT           "Line Gap:",IDC_STATIC,12,137,36,10
-    CONTROL         "Custom Font",IDC_FONT_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,55,10
+    RTEXT           "Line gap:",IDC_STATIC,12,137,36,10
+    CONTROL         "Custom font",IDC_FONT_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,53,10
     GROUPBOX        "Font && Colours",IDC_STATIC,0,0,324,114
     GROUPBOX        "Other",IDC_STATIC,0,120,228,54
 END
@@ -109,6 +122,14 @@ END
 GUIDELINES DESIGNINFO
 BEGIN
     IDD_PREFERENCES_ROOT, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 325
+        TOPMARGIN, 4
+        BOTTOMMARGIN, 281
+    END
+
+    IDD_PREFERENCES_SAVING, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 325
@@ -133,6 +154,11 @@ END
 //
 
 IDD_PREFERENCES_ROOT AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_PREFERENCES_SAVING AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
