Change search to check the save location even if not configured to do so

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -71,25 +71,27 @@ IDD_PREFERENCES_SAVING DIALOGEX 0, 0, 332, 288
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
-    RTEXT           "Save method:",IDC_STATIC,7,15,49,11
-    COMBOBOX        IDC_SAVE_METHOD_COMBO,66,13,125,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,90,121,199,14,ES_AUTOHSCROLL
-    LTEXT           "Static",IDC_SAVE_FILE_NAME_PREVIEW,89,138,144,8,SS_ENDELLIPSIS
-    LTEXT           "Unsynced tag:",IDC_STATIC,24,48,47,8
-    LTEXT           "Synced tag:",IDC_STATIC,29,66,39,8
-    EDITTEXT        IDC_SAVE_TAG_UNSYNCED,74,45,82,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_SAVE_TAG_SYNCED,74,65,82,14,ES_AUTOHSCROLL
-    RTEXT           "File name format:",IDC_STATIC,27,124,59,10
-    GROUPBOX        "Local Files",IDC_STATIC,7,109,318,108
-    GROUPBOX        "ID3 Tags",IDC_STATIC,7,33,318,61
-    COMBOBOX        IDC_SAVE_DIRECTORY_CLASS,90,161,199,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Save directory:",IDC_STATIC,37,163,48,8
+    RTEXT           "Save method:",IDC_STATIC,7,6,45,11
+    COMBOBOX        IDC_SAVE_METHOD_COMBO,59,4,125,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,90,131,199,14,ES_AUTOHSCROLL
+    LTEXT           "Static",IDC_SAVE_FILE_NAME_PREVIEW,89,148,144,8,SS_ENDELLIPSIS
+    LTEXT           "Unsynced tag:",IDC_STATIC,24,58,47,8
+    LTEXT           "Synced tag:",IDC_STATIC,29,76,39,8
+    EDITTEXT        IDC_SAVE_TAG_UNSYNCED,74,55,82,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SAVE_TAG_SYNCED,74,75,82,14,ES_AUTOHSCROLL
+    RTEXT           "File name format:",IDC_STATIC,27,134,59,10
+    GROUPBOX        "Local Files",IDC_STATIC,7,119,318,108
+    GROUPBOX        "ID3 Tags",IDC_STATIC,7,43,318,61
+    COMBOBOX        IDC_SAVE_DIRECTORY_CLASS,90,171,199,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Save directory:",IDC_STATIC,37,173,48,8
     CONTROL         "Auto-save new lyrics",IDC_AUTOSAVE_ENABLED_CHKBOX,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,15,81,10
-    LTEXT           "Custom path format:",IDC_STATIC,21,185,64,8
-    EDITTEXT        IDC_SAVE_CUSTOM_PATH,89,182,200,14,ES_AUTOHSCROLL
-    LTEXT           "Static",IDC_SAVE_CUSTOM_PATH_PREVIEW,90,202,202,8,SS_PATHELLIPSIS
-    PUSHBUTTON      "...",IDC_SAVE_CUSTOM_PATH_BROWSE,292,183,20,14
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,207,6,81,10
+    LTEXT           "Custom path format:",IDC_STATIC,21,195,64,8
+    EDITTEXT        IDC_SAVE_CUSTOM_PATH,89,192,200,14,ES_AUTOHSCROLL
+    LTEXT           "Static",IDC_SAVE_CUSTOM_PATH_PREVIEW,90,212,202,8,SS_PATHELLIPSIS
+    PUSHBUTTON      "...",IDC_SAVE_CUSTOM_PATH_BROWSE,292,193,20,14
+    CONTROL         "Note: The corresponding source will be searched even if it is not configured as active.",IDC_STATIC,
+                    "Static",SS_LEFTNOWORDWRAP | WS_GROUP,9,26,271,8
 END
 
 IDD_PREFERENCES_DISPLAY DIALOGEX 0, 0, 333, 287
