Add the option to only auto-save synced lyrics
Closes #8

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -72,7 +72,7 @@ STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
     RTEXT           "Save method:",IDC_STATIC,7,6,45,11
-    COMBOBOX        IDC_SAVE_METHOD_COMBO,59,4,125,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_SAVE_METHOD_COMBO,59,4,92,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_SAVE_FILENAME_FORMAT,90,131,199,14,ES_AUTOHSCROLL
     LTEXT           "Static",IDC_SAVE_FILE_NAME_PREVIEW,89,148,144,8,SS_ENDELLIPSIS
     LTEXT           "Unsynced tag:",IDC_STATIC,24,58,47,8
@@ -84,14 +84,14 @@ BEGIN
     GROUPBOX        "ID3 Tags",IDC_STATIC,7,43,318,61
     COMBOBOX        IDC_SAVE_DIRECTORY_CLASS,90,171,199,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Save directory:",IDC_STATIC,37,173,48,8
-    CONTROL         "Auto-save new lyrics",IDC_AUTOSAVE_ENABLED_CHKBOX,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,207,6,81,10
     LTEXT           "Custom path format:",IDC_STATIC,21,195,64,8
     EDITTEXT        IDC_SAVE_CUSTOM_PATH,89,192,200,14,ES_AUTOHSCROLL
     LTEXT           "Static",IDC_SAVE_CUSTOM_PATH_PREVIEW,90,212,202,8,SS_PATHELLIPSIS
     PUSHBUTTON      "...",IDC_SAVE_CUSTOM_PATH_BROWSE,292,193,20,14
     CONTROL         "Note: The corresponding source will be searched even if it is not configured as active.",IDC_STATIC,
                     "Static",SS_LEFTNOWORDWRAP | WS_GROUP,9,26,271,8
+    COMBOBOX        IDC_SAVE_AUTOSAVE_TYPE,254,4,71,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Autosave:",IDC_STATIC,218,6,33,8
 END
 
 IDD_PREFERENCES_DISPLAY DIALOGEX 0, 0, 333, 287
