Add support for smoothly scrolling between lines of synced lyrics
Closes #10

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -110,8 +110,11 @@ BEGIN
     EDITTEXT        IDC_RENDER_LINEGAP_EDIT,59,136,40,12,ES_AUTOHSCROLL | ES_NUMBER
     RTEXT           "Line gap:",IDC_STATIC,12,137,36,10
     CONTROL         "Custom font",IDC_FONT_CUSTOM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,53,10
-    GROUPBOX        "Font && Colours",IDC_STATIC,0,0,324,114
-    GROUPBOX        "Other",IDC_STATIC,0,120,228,54
+    GROUPBOX        "Font && Colours",IDC_STATIC,0,0,326,114
+    GROUPBOX        "Other",IDC_STATIC,0,120,326,73
+    LTEXT           "Synced lyric scroll time:",IDC_STATIC,19,159,74,8
+    CONTROL         "",IDC_DISPLAY_SCROLL_TIME,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,103,155,162,15
+    CTEXT           "Static",IDC_DISPLAY_SCROLL_TIME_PREVIEW,112,175,148,8
 END
 
 
