Add support for horizontal lyrics scrolling
Closes #7

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -113,8 +113,10 @@ BEGIN
     GROUPBOX        "Font && Colours",IDC_STATIC,0,0,326,114
     GROUPBOX        "Other",IDC_STATIC,0,120,326,73
     LTEXT           "Synced lyric scroll time:",IDC_STATIC,19,159,74,8
-    CONTROL         "",IDC_DISPLAY_SCROLL_TIME,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,103,155,162,15
-    CTEXT           "Static",IDC_DISPLAY_SCROLL_TIME_PREVIEW,112,175,148,8
+    CONTROL         "",IDC_DISPLAY_SCROLL_TIME,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,103,155,201,15
+    CTEXT           "Static",IDC_DISPLAY_SCROLL_TIME_PREVIEW,112,175,184,8
+    COMBOBOX        IDC_DISPLAY_SCROLL_TYPE,227,136,78,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Scroll direction:",IDC_STATIC,171,137,49,8
 END
 
 
