Add offset-apply and offset-sync buttons to the editor

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -213,13 +213,15 @@ BEGIN
     EDITTEXT        IDC_LYRIC_TEXT,162,7,330,279,ES_MULTILINE | ES_AUTOHSCROLL | ES_NOHIDESEL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
     PUSHBUTTON      "Apply",ID_LYRIC_EDIT_APPLY,440,293,52,16,WS_DISABLED
     PUSHBUTTON      "Synchronise selected line",IDC_LYRIC_EDIT_SYNC,14,17,130,22
-    PUSHBUTTON      "-5s",IDC_LYRIC_EDIT_BACK5,14,76,36,18
-    PUSHBUTTON      "Play",IDC_LYRIC_EDIT_PLAY,56,76,52,18
-    PUSHBUTTON      "+5s",IDC_LYRIC_EDIT_FWD5,114,76,36,18
-    PUSHBUTTON      "Reset/Undo changes",IDC_LYRIC_EDIT_RESET,30,109,94,20
-    LTEXT           "Playback time: 00:00",IDC_LYRIC_EDIT_TIME,15,65,133,8
-    GROUPBOX        "Synchronisation",IDC_STATIC,6,3,148,44
-    GROUPBOX        "Playback",IDC_STATIC,6,51,148,50
+    PUSHBUTTON      "-5s",IDC_LYRIC_EDIT_BACK5,14,139,36,18
+    PUSHBUTTON      "Play",IDC_LYRIC_EDIT_PLAY,56,139,52,18
+    PUSHBUTTON      "+5s",IDC_LYRIC_EDIT_FWD5,114,139,36,18
+    PUSHBUTTON      "Reset/Undo changes",IDC_LYRIC_EDIT_RESET,30,172,94,20
+    LTEXT           "Playback time: 00:00",IDC_LYRIC_EDIT_TIME,15,128,133,8
+    GROUPBOX        "Synchronisation",IDC_STATIC,6,3,148,96
+    GROUPBOX        "Playback",IDC_STATIC,6,114,148,50
+    PUSHBUTTON      "Sync line using 'offset' tag",IDC_LYRIC_EDIT_SYNC_OFFSET,14,50,130,18
+    PUSHBUTTON      "Apply 'offset' tag to timestamps",IDC_LYRIC_EDIT_APPLY_OFFSET,14,74,130,18
 END
 
 
